add: update cart and checkout
